<?xml version="1.0" encoding="utf-8"?>

<!--
 Copyright (c) 2012 Google Inc.  All Rights Reserved.

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="16dp">

    <LinearLayout
        android:id="@+id/found_servers_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingBottom="8dp">

        <TextView
            android:id="@+id/found_servers_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/settings_server_prompt"
            android:textSize="18sp" />

        <Button
            android:id="@+id/refresh_scan_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:text="@string/settings_server_refresh_scan"
            android:paddingHorizontal="12dp"
            android:paddingVertical="6dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/visible_servers_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/found_servers_header"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="8dp" />

    <FrameLayout
        android:id="@+id/scan_progress_container"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@id/visible_servers_container"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center">

        <ImageView
            android:id="@+id/scan_logo"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:src="@drawable/sirius_logo_gold"
            android:contentDescription="@string/app_name"
            android:scaleType="fitCenter" />

        <View
            android:id="@+id/scan_progress"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone" />

    </FrameLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/server_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/scan_progress_container"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/server_address_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/settings_serveraddr_hint"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/server_address"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textNoSuggestions" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/settings_username_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textNoSuggestions" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/settings_password_hint"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/wol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_use_wake_on_lan" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/mac_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/settings_MAC_label"
                app:helperTextEnabled="true"
                app:helperText="@string/settings_MAC_help"
                app:endIconDrawable="@drawable/ic_info"
                app:endIconMode="custom">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mac"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textNoSuggestions" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>
